// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checked 1`] = `
<ds-field data-clickdelegatefor="components-switch--checked">
  <input
    role="switch"
    id="components-switch--checked"
    type="checkbox"
    checked
  >
  <label
    data-weight="regular"
    for="components-switch--checked"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Controlled 1`] = `
<fieldset aria-labelledby="mnsrx3uqsan8">
  <legend
    data-weight="medium"
    id="mnsrx3uqsan8"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <ds-field data-clickdelegatefor="components-switch--controlled">
    <input
      role="switch"
      id="components-switch--controlled"
      type="checkbox"
      checked
    >
    <label
      data-weight="regular"
      for="components-switch--controlled"
    >
      Varsler
    </label>
  </ds-field>
  <p data-variant="default">
    Velg hvilke typer varsler du ønsker å motta.
  </p>
  <ds-field data-clickdelegatefor="components-switch--controlledlydvarsler">
    <input
      id="components-switch--controlledlydvarsler"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="components-switch--controlledlydvarsler"
    >
      Lydvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="components-switch--controlledepostvarsler">
    <input
      id="components-switch--controlledepostvarsler"
      type="checkbox"
      checked
    >
    <label
      data-weight="regular"
      for="components-switch--controlledepostvarsler"
    >
      Epostvarsler
    </label>
  </ds-field>
  <ds-field data-clickdelegatefor="components-switch--controlledpopupvarsler">
    <input
      id="components-switch--controlledpopupvarsler"
      type="checkbox"
    >
    <label
      data-weight="regular"
      for="components-switch--controlledpopupvarsler"
    >
      Popup-varsler
    </label>
  </ds-field>
</fieldset>
`;

exports[`Description 1`] = `
<ds-field data-clickdelegatefor="components-switch--description">
  <input
    role="switch"
    id="components-switch--description"
    type="checkbox"
    checked
    aria-describedby="mnsrx3uqsan1"
  >
  <label
    data-weight="regular"
    for="components-switch--description"
  >
    Åpen prøve
  </label>
  <div
    data-field="description"
    id="mnsrx3uqsan1"
  >
    Prøven er åpen for alle som ønsker å delta.
  </div>
</ds-field>
`;

exports[`Disabled 1`] = `
<ds-field data-clickdelegatefor="disabled-switch">
  <input
    role="switch"
    disabled
    id="disabled-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="disabled-switch"
  >
    Disabled switch
  </label>
</ds-field>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="components-switch--focused">
  <input
    role="switch"
    id="components-switch--focused"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="components-switch--focused"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Group 1`] = `
<fieldset aria-labelledby="mnsrx3uqsan2">
  <legend
    data-weight="medium"
    id="mnsrx3uqsan2"
  >
    Varsler
  </legend>
  <ds-field data-clickdelegatefor="components-switch--grouplydvarsler">
    <input
      role="switch"
      id="components-switch--grouplydvarsler"
      type="checkbox"
      value="lydvarsler"
      checked
      aria-describedby="mnsrx3uqsan3"
    >
    <label
      data-weight="regular"
      for="components-switch--grouplydvarsler"
    >
      Lydvarsler
    </label>
    <div
      data-field="description"
      id="mnsrx3uqsan3"
    >
      Spill av lyd når et varsel mottas.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="components-switch--grouppopup-varsler">
    <input
      role="switch"
      id="components-switch--grouppopup-varsler"
      type="checkbox"
      value="popup-varsler"
      aria-describedby="mnsrx3uqsan4"
    >
    <label
      data-weight="regular"
      for="components-switch--grouppopup-varsler"
    >
      Popup-varsler
    </label>
    <div
      data-field="description"
      id="mnsrx3uqsan4"
    >
      Vis popup-varsler på skjermen.
    </div>
  </ds-field>
  <ds-field data-clickdelegatefor="components-switch--groupemail-varsler">
    <input
      role="switch"
      id="components-switch--groupemail-varsler"
      type="checkbox"
      value="email-varsler"
      aria-describedby="mnsrx3uqsan5"
    >
    <label
      data-weight="regular"
      for="components-switch--groupemail-varsler"
    >
      E-postvarsler
    </label>
    <div
      data-field="description"
      id="mnsrx3uqsan5"
    >
      Tillat e-postvarsler for viktige oppdateringer.
    </div>
  </ds-field>
</fieldset>
`;

exports[`Group End 1`] = `
<fieldset aria-labelledby="mnsrx3uqsan6 mnsrx3uqsan7">
  <legend
    data-weight="medium"
    id="mnsrx3uqsan6"
  >
    <h2>
      Innstillinger
    </h2>
  </legend>
  <p
    data-variant="default"
    id="mnsrx3uqsan7"
  >
    Innstillinger som gjelder hele systemet.
  </p>
  <ds-field
    data-position="end"
    data-clickdelegatefor="components-switch--group-endmork-modus"
  >
    <input
      role="switch"
      id="components-switch--group-endmork-modus"
      type="checkbox"
      value="mork-modus"
      checked
    >
    <label
      data-weight="regular"
      for="components-switch--group-endmork-modus"
    >
      Mørk modus
    </label>
  </ds-field>
  <ds-field
    data-position="end"
    data-clickdelegatefor="components-switch--group-endautomatiske-oppdateringer"
  >
    <input
      role="switch"
      id="components-switch--group-endautomatiske-oppdateringer"
      type="checkbox"
      value="automatiske-oppdateringer"
    >
    <label
      data-weight="regular"
      for="components-switch--group-endautomatiske-oppdateringer"
    >
      Automatiske oppdateringer
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="components-switch--preview">
  <input
    role="switch"
    id="components-switch--preview"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="components-switch--preview"
  >
    En bryter
  </label>
</ds-field>
`;

exports[`Read Only 1`] = `
<ds-field data-clickdelegatefor="readonly-switch">
  <input
    role="switch"
    readonly
    id="readonly-switch"
    type="checkbox"
  >
  <label
    data-weight="regular"
    for="readonly-switch"
  >
    Read-only switch
  </label>
</ds-field>
`;

exports[`Switch In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="switch-in-color-context">
    <input
      role="switch"
      id="switch-in-color-context"
      type="checkbox"
      checked
      aria-describedby="mnsrx3uqsan9"
    >
    <label
      data-weight="regular"
      for="switch-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="mnsrx3uqsan9"
    >
      Description
    </div>
  </ds-field>
</div>
`;
